2006-09-10  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/depthmerge.c (dialogDepthMap2ChangedCallback):
	change "depthMap1Drawable" to "depthMap2Drawable" to fix
	typo introduced in version 1.35 committed on 2004-04-21.
	Should fix bug #355219.

2006-09-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-exif.c: added a thumbnail to the "Rotate
	Image?" query dialog as suggested in bug #355213.

2006-09-10  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/file-save-dialog.c (file_save_dialog_check_uri):
	after appending an extension, invoke "response" on the dialog and
	bail out, so the file chooser re-runs the overwrite-confirm check.

2006-09-10  Sven Neumann  <sven@gimp.org>

	* app/errors.c
	* app/gui/gui-vtable.c: minor cleanup.

2006-09-09  Jakub Steiner <jimmac@ximian.com>

	* themes/Default/images/tools/stock-tool-perspective*.xcf:
	forgot to add the source XCFs

2006-09-09  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpclone.c (gimp_clone_line_image): changed src_pickable
	parameter to src_type.

	(gimp_clone_motion): allow the passed srcPR to have alpha even if
	the source pickable is flat. Pass the correct GimpImageType to
	gimp_clone_line_image().

2006-09-09  Sven Neumann  <sven@gimp.org>

	* app/app_procs.c
	* app/errors.[ch]: moved some code from app_run() to errors_init().

2006-09-09  Sven Neumann  <sven@gimp.org>

	* app/app_procs.[ch]
	* app/main.c: initialize the error subsystem after the gimp object
	has been created.

	* app/errors.[ch]: store a reference to the gimp object (eek) and
	use it to call gimp_gui_ungrab() before g_on_error_query().

	* app/core/gimp-gui.[ch]
	* app/gui/gui-vtable.c: added gimp_gui_ungrab().

2006-09-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/emboss.c: hopefully really fixed bug #353227
	this time.

2006-09-09  Sven Neumann  <sven@gimp.org>

	* app/dialogs/about-dialog.c: added missing include.

	* app/display/display-enums.[ch]